deprecated/ssh-server/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-server
spec:
  selector:
    matchLabels:
      app: ssh-server
  template:
    metadata:
      labels:
        app: ssh-server
    spec:
      # serviceAccountName: ssh-server
      # securityContext:
      #   fsGroup: 1000
      containers:
        - name: ssh-server
          image: lscr.io/linuxserver/openssh-server:latest
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - name: http
              containerPort: 2222
              protocol: TCP
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 22
          volumeMounts:
          - mountPath: "~/data"
            name: ssh-server-data
      volumes:
        - name: ssh-server-data
          nfs:
            server: 192.168.1.56
            path: /mnt/ssd/


---
apiVersion: v1
kind: Service
metadata:
  name: ssh-server
spec:
  selector:
    app: ssh-server
  ports:
    - protocol: TCP
      port: 22
      targetPort: 2222
