deprecated/ssh-server/tcp-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ssh-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-crd-external
spec:
  entryPoints:
    - ssh
  routes:
  - match: HostSNI(`*`)
    services:
      - name: ssh-server
        port: 22
